--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URL = "mongodb+srv://workshop-nodejs:TwOUYA0FLzoXzqjI@cluster0-vnykv.mongodb.net/workshop-nodejs?retryWrites=true&w=majority"
+MONGODB_URL = "mongodb+srv://workshop-nodejs:<password>@cluster0-vnykv.mongodb.net/workshop-nodejs?retryWrites=true&w=majority"
 
 PORT = '8080'
