--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx babel-node ./src/index.js"
+    "start": "npx babel-node ./src/index.js",
+    "lint": "npx eslint ./src",
+    "test": "npx jest --testTimeout=15000",
+    "dev": "npx nodemon --exec babel-node ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,12 +21,21 @@
   "homepage": "https://github.com/NatyNatur/workshop-nodejs#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.8.11"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
-    "@babel/preset-env": "^7.8.4"
+    "@babel/preset-env": "^7.8.4",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1",
+    "jest": "^25.1.0",
+    "nodemon": "^2.0.2",
+    "regenerator-runtime": "^0.13.3",
+    "supertest": "^4.0.2"
   }
 }
